crates/ggml/sys/src/lib.rs

/* automatically generated by rust-bindgen 0.65.1 */

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(unused)]
pub mod llama;

#[cfg(feature = "cublas")]
pub mod cuda;
#[cfg(feature = "metal")]
pub mod metal;
#[cfg(feature = "clblast")]
pub mod opencl;

pub const GGML_FILE_MAGIC: u32 = 1734831468;
pub const GGML_FILE_VERSION: u32 = 1;
pub const GGML_QNT_VERSION: u32 = 2;
pub const GGML_QNT_VERSION_FACTOR: u32 = 1000;
pub const GGML_MAX_DIMS: u32 = 4;
pub const GGML_MAX_NODES: u32 = 4096;
pub const GGML_MAX_PARAMS: u32 = 256;
pub const GGML_MAX_CONTEXTS: u32 = 64;
pub const GGML_MAX_SRC: u32 = 6;
pub const GGML_MAX_NAME: u32 = 48;
pub const GGML_MAX_OP_PARAMS: u32 = 32;
pub const GGML_DEFAULT_N_THREADS: u32 = 4;
pub const GGML_EXIT_SUCCESS: u32 = 0;
pub const GGML_EXIT_ABORTED: u32 = 1;
pub const GGML_GRAPH_HASHTABLE_SIZE: u32 = 8273;
pub const QK_K: u32 = 256;
pub const K_SCALE_SIZE: u32 = 12;
pub type ggml_fp16_t = u16;
extern "C" {
    pub fn ggml_fp16_to_fp32(x: ggml_fp16_t) -> f32;
}
extern "C" {
    pub fn ggml_fp32_to_fp16(x: f32) -> ggml_fp16_t;
}
extern "C" {
    pub fn ggml_fp16_to_fp32_row(x: *const ggml_fp16_t, y: *mut f32, n: ::std::os::raw::c_int);
}
extern "C" {
    pub fn ggml_fp32_to_fp16_row(x: *const f32, y: *mut ggml_fp16_t, n: ::std::os::raw::c_int);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_context {
    _unused: [u8; 0],
}
pub const ggml_type_GGML_TYPE_F32: ggml_type = 0;
pub const ggml_type_GGML_TYPE_F16: ggml_type = 1;
pub const ggml_type_GGML_TYPE_Q4_0: ggml_type = 2;
pub const ggml_type_GGML_TYPE_Q4_1: ggml_type = 3;
pub const ggml_type_GGML_TYPE_Q5_0: ggml_type = 6;
pub const ggml_type_GGML_TYPE_Q5_1: ggml_type = 7;
pub const ggml_type_GGML_TYPE_Q8_0: ggml_type = 8;
pub const ggml_type_GGML_TYPE_Q8_1: ggml_type = 9;
pub const ggml_type_GGML_TYPE_Q2_K: ggml_type = 10;
pub const ggml_type_GGML_TYPE_Q3_K: ggml_type = 11;
pub const ggml_type_GGML_TYPE_Q4_K: ggml_type = 12;
pub const ggml_type_GGML_TYPE_Q5_K: ggml_type = 13;
pub const ggml_type_GGML_TYPE_Q6_K: ggml_type = 14;
pub const ggml_type_GGML_TYPE_Q8_K: ggml_type = 15;
pub const ggml_type_GGML_TYPE_I8: ggml_type = 16;
pub const ggml_type_GGML_TYPE_I16: ggml_type = 17;
pub const ggml_type_GGML_TYPE_I32: ggml_type = 18;
pub const ggml_type_GGML_TYPE_COUNT: ggml_type = 19;
pub type ggml_type = ::std::os::raw::c_uint;
pub const ggml_backend_GGML_BACKEND_CPU: ggml_backend = 0;
pub const ggml_backend_GGML_BACKEND_GPU: ggml_backend = 10;
pub const ggml_backend_GGML_BACKEND_GPU_SPLIT: ggml_backend = 20;
pub type ggml_backend = ::std::os::raw::c_uint;
pub const ggml_ftype_GGML_FTYPE_UNKNOWN: ggml_ftype = -1;
pub const ggml_ftype_GGML_FTYPE_ALL_F32: ggml_ftype = 0;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_F16: ggml_ftype = 1;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q4_0: ggml_ftype = 2;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q4_1: ggml_ftype = 3;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q4_1_SOME_F16: ggml_ftype = 4;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q8_0: ggml_ftype = 7;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q5_0: ggml_ftype = 8;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q5_1: ggml_ftype = 9;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q2_K: ggml_ftype = 10;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q3_K: ggml_ftype = 11;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q4_K: ggml_ftype = 12;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q5_K: ggml_ftype = 13;
pub const ggml_ftype_GGML_FTYPE_MOSTLY_Q6_K: ggml_ftype = 14;
pub type ggml_ftype = ::std::os::raw::c_int;
pub const ggml_op_GGML_OP_NONE: ggml_op = 0;
pub const ggml_op_GGML_OP_DUP: ggml_op = 1;
pub const ggml_op_GGML_OP_ADD: ggml_op = 2;
pub const ggml_op_GGML_OP_ADD1: ggml_op = 3;
pub const ggml_op_GGML_OP_ACC: ggml_op = 4;
pub const ggml_op_GGML_OP_SUB: ggml_op = 5;
pub const ggml_op_GGML_OP_MUL: ggml_op = 6;
pub const ggml_op_GGML_OP_DIV: ggml_op = 7;
pub const ggml_op_GGML_OP_SQR: ggml_op = 8;
pub const ggml_op_GGML_OP_SQRT: ggml_op = 9;
pub const ggml_op_GGML_OP_LOG: ggml_op = 10;
pub const ggml_op_GGML_OP_SUM: ggml_op = 11;
pub const ggml_op_GGML_OP_SUM_ROWS: ggml_op = 12;
pub const ggml_op_GGML_OP_MEAN: ggml_op = 13;
pub const ggml_op_GGML_OP_ARGMAX: ggml_op = 14;
pub const ggml_op_GGML_OP_REPEAT: ggml_op = 15;
pub const ggml_op_GGML_OP_REPEAT_BACK: ggml_op = 16;
pub const ggml_op_GGML_OP_SILU_BACK: ggml_op = 17;
pub const ggml_op_GGML_OP_NORM: ggml_op = 18;
pub const ggml_op_GGML_OP_RMS_NORM: ggml_op = 19;
pub const ggml_op_GGML_OP_RMS_NORM_BACK: ggml_op = 20;
pub const ggml_op_GGML_OP_MUL_MAT: ggml_op = 21;
pub const ggml_op_GGML_OP_OUT_PROD: ggml_op = 22;
pub const ggml_op_GGML_OP_SCALE: ggml_op = 23;
pub const ggml_op_GGML_OP_SET: ggml_op = 24;
pub const ggml_op_GGML_OP_CPY: ggml_op = 25;
pub const ggml_op_GGML_OP_CONT: ggml_op = 26;
pub const ggml_op_GGML_OP_RESHAPE: ggml_op = 27;
pub const ggml_op_GGML_OP_VIEW: ggml_op = 28;
pub const ggml_op_GGML_OP_PERMUTE: ggml_op = 29;
pub const ggml_op_GGML_OP_TRANSPOSE: ggml_op = 30;
pub const ggml_op_GGML_OP_GET_ROWS: ggml_op = 31;
pub const ggml_op_GGML_OP_GET_ROWS_BACK: ggml_op = 32;
pub const ggml_op_GGML_OP_DIAG: ggml_op = 33;
pub const ggml_op_GGML_OP_DIAG_MASK_INF: ggml_op = 34;
pub const ggml_op_GGML_OP_DIAG_MASK_ZERO: ggml_op = 35;
pub const ggml_op_GGML_OP_SOFT_MAX: ggml_op = 36;
pub const ggml_op_GGML_OP_SOFT_MAX_BACK: ggml_op = 37;
pub const ggml_op_GGML_OP_ROPE: ggml_op = 38;
pub const ggml_op_GGML_OP_ROPE_BACK: ggml_op = 39;
pub const ggml_op_GGML_OP_ALIBI: ggml_op = 40;
pub const ggml_op_GGML_OP_CLAMP: ggml_op = 41;
pub const ggml_op_GGML_OP_CONV_1D: ggml_op = 42;
pub const ggml_op_GGML_OP_CONV_2D: ggml_op = 43;
pub const ggml_op_GGML_OP_POOL_1D: ggml_op = 44;
pub const ggml_op_GGML_OP_POOL_2D: ggml_op = 45;
pub const ggml_op_GGML_OP_FLASH_ATTN: ggml_op = 46;
pub const ggml_op_GGML_OP_FLASH_FF: ggml_op = 47;
pub const ggml_op_GGML_OP_FLASH_ATTN_BACK: ggml_op = 48;
pub const ggml_op_GGML_OP_WIN_PART: ggml_op = 49;
pub const ggml_op_GGML_OP_WIN_UNPART: ggml_op = 50;
pub const ggml_op_GGML_OP_UNARY: ggml_op = 51;
pub const ggml_op_GGML_OP_MAP_UNARY: ggml_op = 52;
pub const ggml_op_GGML_OP_MAP_BINARY: ggml_op = 53;
pub const ggml_op_GGML_OP_MAP_CUSTOM1: ggml_op = 54;
pub const ggml_op_GGML_OP_MAP_CUSTOM2: ggml_op = 55;
pub const ggml_op_GGML_OP_MAP_CUSTOM3: ggml_op = 56;
pub const ggml_op_GGML_OP_CROSS_ENTROPY_LOSS: ggml_op = 57;
pub const ggml_op_GGML_OP_CROSS_ENTROPY_LOSS_BACK: ggml_op = 58;
pub const ggml_op_GGML_OP_COUNT: ggml_op = 59;
pub type ggml_op = ::std::os::raw::c_uint;
pub const ggml_unary_op_GGML_UNARY_OP_ABS: ggml_unary_op = 0;
pub const ggml_unary_op_GGML_UNARY_OP_SGN: ggml_unary_op = 1;
pub const ggml_unary_op_GGML_UNARY_OP_NEG: ggml_unary_op = 2;
pub const ggml_unary_op_GGML_UNARY_OP_STEP: ggml_unary_op = 3;
pub const ggml_unary_op_GGML_UNARY_OP_TANH: ggml_unary_op = 4;
pub const ggml_unary_op_GGML_UNARY_OP_ELU: ggml_unary_op = 5;
pub const ggml_unary_op_GGML_UNARY_OP_RELU: ggml_unary_op = 6;
pub const ggml_unary_op_GGML_UNARY_OP_GELU: ggml_unary_op = 7;
pub const ggml_unary_op_GGML_UNARY_OP_GELU_QUICK: ggml_unary_op = 8;
pub const ggml_unary_op_GGML_UNARY_OP_SILU: ggml_unary_op = 9;
pub type ggml_unary_op = ::std::os::raw::c_int;
pub const ggml_object_type_GGML_OBJECT_TENSOR: ggml_object_type = 0;
pub const ggml_object_type_GGML_OBJECT_GRAPH: ggml_object_type = 1;
pub const ggml_object_type_GGML_OBJECT_WORK_BUFFER: ggml_object_type = 2;
pub type ggml_object_type = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_object {
    pub offs: usize,
    pub size: usize,
    pub next: *mut ggml_object,
    pub type_: ggml_object_type,
    pub padding: [::std::os::raw::c_char; 4usize],
}
#[test]
fn bindgen_test_layout_ggml_object() {
    const UNINIT: ::std::mem::MaybeUninit<ggml_object> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ggml_object>(),
        32usize,
        concat!("Size of: ", stringify!(ggml_object))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_object>(),
        8usize,
        concat!("Alignment of ", stringify!(ggml_object))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).offs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(offs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).padding) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(padding)
        )
    );
}
pub const GGML_OBJECT_SIZE: usize = 32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_tensor {
    pub type_: ggml_type,
    pub backend: ggml_backend,
    pub n_dims: ::std::os::raw::c_int,
    pub ne: [i64; 4usize],
    pub nb: [usize; 4usize],
    pub op: ggml_op,
    pub op_params: [i32; 8usize],
    pub is_param: bool,
    pub grad: *mut ggml_tensor,
    pub src: [*mut ggml_tensor; 6usize],
    pub perf_runs: ::std::os::raw::c_int,
    pub perf_cycles: i64,
    pub perf_time_us: i64,
    pub data: *mut ::std::os::raw::c_void,
    pub name: [::std::os::raw::c_char; 48usize],
    pub extra: *mut ::std::os::raw::c_void,
    pub padding: [::std::os::raw::c_char; 4usize],
}
